Pictures and Banners Added

--- a/website/about-the-site.html
+++ b/website/about-the-site.html
@@ -119,8 +119,8 @@
 	  <li>Doctors, villians, companions sites created</li>
 	  <li>Master template done</li>
 	  <li>Content filled</li>
-	  <li>Banners being added</li>
-	  <li>Pictures being added</li>
+	  <li>Banners added</li>
+	  <li>Pictures  added</li>
 	  <li>Style sheet done</li>
 	  </ul>
 	<!-- InstanceEndEditable -->
