--- a/website/the-doctors/2-patrick-troughton.html
+++ b/website/the-doctors/2-patrick-troughton.html
@@ -6,6 +6,7 @@
 <title>The Doctor Who Website</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
+<link href="../styles.css" rel="stylesheet" type="text/css">
 <!-- InstanceEndEditable -->
 <!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="true" -->
 <!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
@@ -19,7 +20,7 @@
     <td colspan="2"><p>[Primary Navigation]</p></td>
   </tr>
   <tr>
-    <td colspan="2"><!-- InstanceBeginEditable name="Banner" -->[Banner]<!-- InstanceEndEditable --></td>
+    <td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-doctors.jpg" width="950" height="150" alt=""/><!-- InstanceEndEditable --></td>
   </tr>
   <tr>
     <td><p>&nbsp;</p>
@@ -68,7 +69,7 @@
 	<!-- InstanceBeginEditable name="Content Area" -->
       <h1>The Second Doctor</h1>
       <p>Portrayed by <b>Patrick Troughton</b></p>
-      <p>The Second Doctor is the second incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He was portrayed by character actor Patrick Troughton.<br>
+      <p><img src="../images/the-doctors/doctor2.jpg" width="300" height="300" alt=""/>The Second Doctor is the second incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He was portrayed by character actor Patrick Troughton.<br>
         The Second Doctor has been nicknamed the &quot;Cosmic Hobo&quot;, as the impish Second Doctor appeared to be far more scruffy and childlike than his first incarnation.<br>
         </p>
       <p>Mercurial, clever, and always a few steps ahead of his enemies, at times he could be a calculating schemer who would not only manipulate people for the greater good but act like a bumbling fool in order to have others underestimate his true abilities. Sometimes this appears simply as a joke, such as in The Tomb of the Cybermen, where he finishes the archaeologists' calculations behind their backs, but at other times, it seems much darker. In The Evil of the Daleks he coldly manipulates Jamie into trying to rescue Victoria (thus setting in motion the Human Factor tests) and is unsympathetic when Edward Waterfield tries to apologise for his collaboration with the Daleks. Despite the bluster and tendency to panic when events got out of control, the Second Doctor always acted heroically and morally in his desire to help the oppressed.<br>
