--- a/website/the-doctors/7-sylvester-mccoy.html
+++ b/website/the-doctors/7-sylvester-mccoy.html
@@ -6,6 +6,7 @@
 <title>The Doctor Who Website</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
+<link href="../styles.css" rel="stylesheet" type="text/css">
 <!-- InstanceEndEditable -->
 <!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="true" -->
 <!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
@@ -19,7 +20,7 @@
     <td colspan="2"><p>[Primary Navigation]</p></td>
   </tr>
   <tr>
-    <td colspan="2"><!-- InstanceBeginEditable name="Banner" -->[Banner]<!-- InstanceEndEditable --></td>
+    <td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-doctors.jpg" width="950" height="150" alt=""/><!-- InstanceEndEditable --></td>
   </tr>
   <tr>
     <td><p>&nbsp;</p>
@@ -68,7 +69,7 @@
 	<!-- InstanceBeginEditable name="Content Area" -->
       <h1>The Seventh Doctor </h1>
       <p>Portrayed by <b>Sylvester McCoy</b></p>
-      <p>The Seventh Doctor is the seventh incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He was portrayed by the actor Sylvester McCoy.<br>
+      <p><img src="../images/the-doctors/doctor7.jpg" width="300" height="300" alt=""/>The Seventh Doctor is the seventh incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He was portrayed by the actor Sylvester McCoy.<br>
         Within the series' narrative, the Doctor is a centuries-old Time Lord alien from the planet Gallifrey who travels in time and space in his TARDIS, frequently with companions. When the Doctor is critically injured, he can regenerate his body; in doing so, his physical appearance and personality change. McCoy portrays the seventh such incarnation, a whimsical, thoughtful character who quickly becomes more layered, secretive, and manipulative. His first companion was Melanie Bush (Bonnie Langford), a computer programmer who travelled with his previous incarnation, and who is soon succeeded by troubled teenager and explosives expert Ace (Sophie Aldred), who becomes his protégée.<br>
       </p>
       <p>The Seventh Doctor was originally light-hearted and prone to clownish behaviour, which masked his intellect and courage. As he matured, he took a much darker turn. He became a master manipulator who saw the battle between good and evil as a game of chess and everyone around him as pawns in the game of fighting evil. Frequently, he would see only the &quot;bigger picture&quot; rather than the world before him. He devastated Ace by labelling her, among other things, an &quot;emotional cripple&quot; during his battle with Fenric. This was necessary for her to briefly abandon her belief in him, weakening Fenric's power, which he did not explain until later. </p>
