--- a/website/the-doctors/9-christopher-eccleston.html
+++ b/website/the-doctors/9-christopher-eccleston.html
@@ -6,6 +6,7 @@
 <title>The Doctor Who Website</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
+<link href="../styles.css" rel="stylesheet" type="text/css">
 <!-- InstanceEndEditable -->
 <!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="true" -->
 <!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
@@ -19,7 +20,7 @@
     <td colspan="2"><p>[Primary Navigation]</p></td>
   </tr>
   <tr>
-    <td colspan="2"><!-- InstanceBeginEditable name="Banner" -->[Banner]<!-- InstanceEndEditable --></td>
+    <td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-doctors.jpg" width="950" height="150" alt=""/><!-- InstanceEndEditable --></td>
   </tr>
   <tr>
     <td><p>&nbsp;</p>
@@ -68,7 +69,7 @@
 	<!-- InstanceBeginEditable name="Content Area" -->
       <h1>The Ninth Doctor</h1>
       <p>Portrayed by <b>Christopher Eccleston</b></p>
-      <p>The Ninth Doctor was the ninth incarnation of the Time Lord known as the Doctor. Coping with the nightmarish events of the Last Great Time War, he tended to brood and act crossly to those who rubbed him the wrong way. Despite this, he remained jovial and quite friendly towards anyone he took a liking to. Rose Tyler was his most constant companion, although he did share several adventures with Jack Harkness as well. Absolutely definitive statements about the origins of the Ninth Doctor were complicated, however, by a lack of knowledge about his precise contributions in the Time War and the circumstances in which he regenerated from his predecessor.<br>
+      <p><img src="../images/the-doctors/doctor9.jpg" width="300" height="300" alt=""/>The Ninth Doctor was the ninth incarnation of the Time Lord known as the Doctor. Coping with the nightmarish events of the Last Great Time War, he tended to brood and act crossly to those who rubbed him the wrong way. Despite this, he remained jovial and quite friendly towards anyone he took a liking to. Rose Tyler was his most constant companion, although he did share several adventures with Jack Harkness as well. Absolutely definitive statements about the origins of the Ninth Doctor were complicated, however, by a lack of knowledge about his precise contributions in the Time War and the circumstances in which he regenerated from his predecessor.<br>
         </p>
       <p>During the Slitheen's attempt to destroy the Earth for profit, he gained temporary allies in Rose's mother Jackie, Rose's ex-boyfriend Mickey, and Harriet Jones. He also had a single adventure with Adam Mitchell, an employee of Henry van Statten, at Rose's request.<br>
       </p>
