--- a/website/the-doctors/index.html
+++ b/website/the-doctors/index.html
@@ -19,7 +19,7 @@
     <td colspan="2"><p>[Primary Navigation]</p></td>
   </tr>
   <tr>
-    <td colspan="2"><!-- InstanceBeginEditable name="Banner" -->[Banner]<!-- InstanceEndEditable --></td>
+    <td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-doctors.jpg" width="950" height="150" alt=""/><!-- InstanceEndEditable --></td>
   </tr>
   <tr>
     <td><p>&nbsp;</p>
