--- a/website/the-villans/1-daleks.html
+++ b/website/the-villans/1-daleks.html
@@ -6,6 +6,7 @@
 <title>The Doctor Who Website</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
+<link href="../styles.css" rel="stylesheet" type="text/css">
 <!-- InstanceEndEditable -->
 <!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="false" -->
 <!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
@@ -19,7 +20,7 @@
     <td colspan="2"><p>[Primary Navigation]</p></td>
   </tr>
   <tr>
-    <td colspan="2"><!-- InstanceBeginEditable name="Banner" -->[Banner]<!-- InstanceEndEditable --></td>
+    <td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-villains.jpg" width="950" height="150" alt=""/><!-- InstanceEndEditable --></td>
   </tr>
   <tr>
     <td><p>&nbsp;</p>
@@ -49,7 +50,7 @@
     <div class="doctor-who-content">
 	<!-- InstanceBeginEditable name="Content Area" -->
       <h1>Daleks      </h1>
-      <p>Daleks were the armoured, mutated descendants of the Kaleds of the planet Skaro. They fought the Time Lords in the Last Great Time War, ending in the near-total destruction of both races. The Daleks were hated and feared throughout time and space. They were the oldest and most frequent foes of the Doctor, having faced him several times in every one of his incarnations.The Daleks were conceived by science-fiction writer Terry Nation and first appeared in the 1963 Doctor Who serial The Daleks, in the shells designed by Raymond Cusick.<br>
+      <p><img src="../images/the-villians/daleks.jpg" width="300" height="300" alt=""/>Daleks were the armoured, mutated descendants of the Kaleds of the planet Skaro. They fought the Time Lords in the Last Great Time War, ending in the near-total destruction of both races. The Daleks were hated and feared throughout time and space. They were the oldest and most frequent foes of the Doctor, having faced him several times in every one of his incarnations.The Daleks were conceived by science-fiction writer Terry Nation and first appeared in the 1963 Doctor Who serial The Daleks, in the shells designed by Raymond Cusick.<br>
         </p>
       <p>Although the Daleks looked entirely robotic, they were in fact cybernetic organisms or cyborgs, with a biological body encased in and supported by a protective outer shell of Dalekanium metal armour, armed and mobile. These were actually the Mark III travel machines designed to carry their mutant forms, and they were not true integrated biomechanoids. In this respect, they were somewhat similar to a Cyberman; unlike them, however, the Daleks' bodies had mutated so drastically from their Kaled ancestors they had lost all humanoid appearance, save for one eye. The Daleks shared information using a sort of artificial telepathic network known as the Pathweb.<br>
         </p>
