--- a/website/the-villans/2-cyberman.html
+++ b/website/the-villans/2-cyberman.html
@@ -6,6 +6,7 @@
 <title>The Doctor Who Website</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
+<link href="../styles.css" rel="stylesheet" type="text/css">
 <!-- InstanceEndEditable -->
 <!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="false" -->
 <!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
@@ -19,7 +20,7 @@
     <td colspan="2"><p>[Primary Navigation]</p></td>
   </tr>
   <tr>
-    <td colspan="2"><!-- InstanceBeginEditable name="Banner" -->[Banner]<!-- InstanceEndEditable --></td>
+    <td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-villains.jpg" width="950" height="150" alt=""/><!-- InstanceEndEditable --></td>
   </tr>
   <tr>
     <td><p>&nbsp;</p>
@@ -49,7 +50,7 @@
     <div class="doctor-who-content">
 	<!-- InstanceBeginEditable name="Content Area" -->
       <h1>The Cyberman</h1>
-      <p>Cybermen were a &quot;race&quot; of cybernetically augmented humanoids. They varied greatly in design, with different factions throughout time and space. The two major groups, from which all other known versions derived, were the Mondasian Cybermen, which originated on the planet Mondas – Earth's twin planet in the Doctor's universe – and the Cybermen created by Cybus Industries, which originated on Earth in an alternate universe.<br>
+      <p><img src="../images/the-villians/cybermen.jpg" width="300" height="300" alt=""/>Cybermen were a &quot;race&quot; of cybernetically augmented humanoids. They varied greatly in design, with different factions throughout time and space. The two major groups, from which all other known versions derived, were the Mondasian Cybermen, which originated on the planet Mondas – Earth's twin planet in the Doctor's universe – and the Cybermen created by Cybus Industries, which originated on Earth in an alternate universe.<br>
         </p>
       <p>Despite the different origins, there were similarities between both groups of Cybermen, and there were groups that shared the characteristics of both. For the most part, they lacked individuality or names. Cybermen had no emotions and viewed them as a weakness. They frequently attempted to physically and mentally re-engineer humans and other humanoids into Cybermen, via a process called &quot;cyber-conversion&quot; or &quot;upgrading&quot;.<br>
         </p>
