--- a/website/the-villans/3-the-master.html
+++ b/website/the-villans/3-the-master.html
@@ -6,6 +6,7 @@
 <title>The Doctor Who Website</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
+<link href="../styles.css" rel="stylesheet" type="text/css">
 <!-- InstanceEndEditable -->
 <!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="false" -->
 <!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
@@ -19,7 +20,7 @@
     <td colspan="2"><p>[Primary Navigation]</p></td>
   </tr>
   <tr>
-    <td colspan="2"><!-- InstanceBeginEditable name="Banner" -->[Banner]<!-- InstanceEndEditable --></td>
+    <td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-villains.jpg" width="950" height="150" alt=""/><!-- InstanceEndEditable --></td>
   </tr>
   <tr>
     <td><p>&nbsp;</p>
@@ -50,7 +51,7 @@
 	<!-- InstanceBeginEditable name="Content Area" -->
       <h1>The Master</h1>
       <p>Portrayed by <b>Geoffery Beevers</b></p>
-      <p>The Master — originally called Koschei and known by many other temporary aliases — was a renegade Time Lord and the Doctor's arch-nemesis.<br>
+      <p><img src="../images/the-villians/the-master.jpg" width="300" height="300" alt=""/>The Master — originally called Koschei and known by many other temporary aliases — was a renegade Time Lord and the Doctor's arch-nemesis.<br>
         </p>
       <p>Although they were originally boyhood friends, one of the Master's primary goals was to destroy the Doctor and Earth while acting on a number of schemes, both petty and gross. <br>
         The Master was referred to as a &quot;jackanapes&quot; and an &quot;unimaginative plodder&quot; by the Third Doctor , the &quot;quintessence of evil&quot; by the Fourth Doctor, &quot;one of the most evil and corrupt beings [the] Time Lord race [had] ever produced&quot; and that his &quot;crimes [were] without number and [his] villainy without end&quot; by High Council President Borusa, &quot;pure evil&quot; by the Eighth Doctor, &quot;stone-cold brilliant&quot; by the Tenth Doctor , and &quot;the Time Lords' most infamous child&quot; by Time Lord founder Rassilon. <br>
