--- a/website/the-villans/4-lady-cassandra.html
+++ b/website/the-villans/4-lady-cassandra.html
@@ -6,6 +6,7 @@
 <title>The Doctor Who Website</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
+<link href="../styles.css" rel="stylesheet" type="text/css">
 <!-- InstanceEndEditable -->
 <!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="false" -->
 <!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
@@ -19,7 +20,7 @@
     <td colspan="2"><p>[Primary Navigation]</p></td>
   </tr>
   <tr>
-    <td colspan="2"><!-- InstanceBeginEditable name="Banner" -->[Banner]<!-- InstanceEndEditable --></td>
+    <td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-villains.jpg" width="950" height="150" alt=""/><!-- InstanceEndEditable --></td>
   </tr>
   <tr>
     <td><p>&nbsp;</p>
@@ -50,7 +51,7 @@
 	<!-- InstanceBeginEditable name="Content Area" -->
       <h1>Lady Cassandra</h1>
       <p>Portrayed by <b>Zoe Wanamaker</b></p>
-      <p>Lady Cassandra O'Brien.Δ17 (pronounced &quot;dot delta seventeen&quot;), or simply Lady Cassandra, was a former human in the far future. Along with other rich and powerful people of the universe, Cassandra was on Platform One, a space station orbiting Earth in the year 5,000,000,000, set to witness the destruction of the planet by the expansion of the Sun.<br>
+      <p><img src="../images/the-villians/lady-cassandra.jpg" width="300" height="300" alt=""/>Lady Cassandra O'Brien.Δ17 (pronounced &quot;dot delta seventeen&quot;), or simply Lady Cassandra, was a former human in the far future. Along with other rich and powerful people of the universe, Cassandra was on Platform One, a space station orbiting Earth in the year 5,000,000,000, set to witness the destruction of the planet by the expansion of the Sun.<br>
         </p>
       <p>According to Cassandra, her father, a Texan, and her mother, who came from the Arctic Desert, were the last to be buried in Earth's soil. She was born a male on Earth and lived on the edge of the &quot;Los Angeles Crevasse&quot;.<br>
         </p>
