--- a/website/the-villans/5-davros.html
+++ b/website/the-villans/5-davros.html
@@ -6,6 +6,7 @@
 <title>The Doctor Who Website</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
+<link href="../styles.css" rel="stylesheet" type="text/css">
 <!-- InstanceEndEditable -->
 <!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="false" -->
 <!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
@@ -19,7 +20,7 @@
     <td colspan="2"><p>[Primary Navigation]</p></td>
   </tr>
   <tr>
-    <td colspan="2"><!-- InstanceBeginEditable name="Banner" -->[Banner]<!-- InstanceEndEditable --></td>
+    <td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-villains.jpg" width="950" height="150" alt=""/><!-- InstanceEndEditable --></td>
   </tr>
   <tr>
     <td><p>&nbsp;</p>
@@ -50,7 +51,7 @@
 	<!-- InstanceBeginEditable name="Content Area" -->
       <h1>Davros</h1>
       <p>Portrayed by <b>Terry Molloy</b></p>
-      <p>Davros was originally the head of the Kaled Scientific Elite, on the planet Skaro, but became better known as the creator of the Daleks. During the Imperial-Renegade Dalek Civil War, he served as Emperor of the Imperial Dalek faction and later of the Dalek race as a whole, but his relationship with his creations was always tense. He was frequently hunted, maligned or otherwise denigrated by some portion of the overall Dalek population.<br>
+      <p><img src="../images/the-villians/davros.jpg" width="300" height="300" alt=""/>Davros was originally the head of the Kaled Scientific Elite, on the planet Skaro, but became better known as the creator of the Daleks. During the Imperial-Renegade Dalek Civil War, he served as Emperor of the Imperial Dalek faction and later of the Dalek race as a whole, but his relationship with his creations was always tense. He was frequently hunted, maligned or otherwise denigrated by some portion of the overall Dalek population.<br>
         </p>
       <p>Despite the fact that he was not the unquestioned ruler of the Daleks, he was one of the Doctor's greatest enemies, rivalling the Master in intellect and madness. Because of his creations, he was responsible for trillions of deaths and war across the universe.<br>
         </p>
