--- a/website/the-villans/6-weeping-angels.html
+++ b/website/the-villans/6-weeping-angels.html
@@ -6,6 +6,7 @@
 <title>The Doctor Who Website</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
+<link href="../styles.css" rel="stylesheet" type="text/css">
 <!-- InstanceEndEditable -->
 <!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="false" -->
 <!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
@@ -19,7 +20,7 @@
     <td colspan="2"><p>[Primary Navigation]</p></td>
   </tr>
   <tr>
-    <td colspan="2"><!-- InstanceBeginEditable name="Banner" -->[Banner]<!-- InstanceEndEditable --></td>
+    <td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-villains.jpg" width="950" height="150" alt=""/><!-- InstanceEndEditable --></td>
   </tr>
   <tr>
     <td><p>&nbsp;</p>
@@ -49,7 +50,7 @@
     <div class="doctor-who-content">
 	<!-- InstanceBeginEditable name="Content Area" -->
       <h1>The Weeping Angels </h1>
-      <p>The Weeping Angels were a species of quantum-locked humanoids, so called because their unique nature necessitated that they often covered their faces with their hands to prevent trapping each other in petrified form for eternity by looking at one another. This gave the Weeping Angels their distinct &quot;weeping&quot; appearance. They were known for being murderous psychopaths, eradicating their victims &quot;mercifully&quot; by dropping them into the past and letting them live out their full lives, just in a different time period. This, in turn, allowed them to live off the remaining time energy of the victim's life. However, when this potential energy paled in comparison to an alternative power source to feed on, the Angels were known to kill by other means, such as snapping their victims' necks.<br>
+      <p><img src="../images/the-villians/weeping-angels.jpg" width="300" height="300" alt=""/>The Weeping Angels were a species of quantum-locked humanoids, so called because their unique nature necessitated that they often covered their faces with their hands to prevent trapping each other in petrified form for eternity by looking at one another. This gave the Weeping Angels their distinct &quot;weeping&quot; appearance. They were known for being murderous psychopaths, eradicating their victims &quot;mercifully&quot; by dropping them into the past and letting them live out their full lives, just in a different time period. This, in turn, allowed them to live off the remaining time energy of the victim's life. However, when this potential energy paled in comparison to an alternative power source to feed on, the Angels were known to kill by other means, such as snapping their victims' necks.<br>
         </p>
       <p>Weeping Angels that were converted from ordinary statues appeared as they did before being taken over, and other Angels resembled stone statues of winged, humanoid women in chitons. Baby Angels resembled cherubs — naked, infant-sized versions of adult Angels. Baby angels possessed the same traits as the others, but when they aren't seen, their footsteps and child-like giggles can be heard. When showing ferocity, Weeping Angels would bare their fangs and claws. <br>
         </p>
