--- a/website/the-companions/4-jack-harness.html
+++ b/website/the-companions/4-jack-harness.html
@@ -6,6 +6,7 @@
 <title>The Doctor Who Website</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
+<link href="../styles.css" rel="stylesheet" type="text/css">
 <!-- InstanceEndEditable -->
 <!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="false" -->
 <!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="true" -->
@@ -56,8 +57,8 @@
 	<!-- InstanceBeginEditable name="Content Area" -->
       <h1>Jack Harness</h1>
       <p>Portrayed by <b>John Barrowman</b></p>
-      <p>Captain Jack Harkness is a fictional character played by John Barrowman in Doctor Who and its spin-off series, Torchwood. He first appeared in the 2005 Doctor Who episode &quot;The Empty Child&quot; and reappeared in the remaining episodes of the 2005 series as a companion of the ninth incarnation of the series' protagonist the Doctor. Jack became the central character in the adult-themed Torchwood, and returned in the 2007 series of Doctor Who, reuniting with the tenth incarnation of the Doctor, and again for the 2008 series and a 2010 special.<br>
-        </p>
+      <p><img src="../images/the-companions/jack-harness.jpg" width="300" height="300" alt=""/>Captain Jack Harkness is a fictional character played by John Barrowman in Doctor Who and its spin-off series, Torchwood. He first appeared in the 2005 Doctor Who episode &quot;The Empty Child&quot; and reappeared in the remaining episodes of the 2005 series as a companion of the ninth incarnation of the series' protagonist the Doctor. Jack became the central character in the adult-themed Torchwood, and returned in the 2007 series of Doctor Who, reuniting with the tenth incarnation of the Doctor, and again for the 2008 series and a 2010 special.<br>
+      </p>
       <p>In the program's narrative, Jack begins as a time traveler and former con man from the 51st century. In contrast to the Doctor, Jack is a man of action, more willing to apply a hands-on solution to a problem. As a consequence of his death and resurrection in the 2005 series finale of Doctor Who, the character gains immortality. On Earth, Jack becomes a member of Torchwood, a British organization dedicated to combating alien threats, becoming its leader over a century later. An ambiguous backstory is gradually revealed in the course of both series, adding another layer of complexity to the character.<br>
         Jack is the first openly non-heterosexual character in the history of televised Doctor Who. The popularity of the character amongst multiple audiences directly influenced the development of the spin-off series Torchwood. The character became a figure of the British public consciousness, rapidly gaining fame for portrayer John Barrowman. As an ongoing depiction of bisexuality in mainstream British television, the character became a role model for young gay and bisexual people in the UK. Jack is featured in various Doctor Who and Torchwood books and has action figures created in his likeness.</p>
       <p>Jack Harkness' personality was willfully enigmatic. He enjoyed his persona of 'mysterious time traveller,' much of which remained constant in his experiences with Torchwood and the Doctor. Before being cursed with immortality, he was a flippant former con man who loved adventuring with the Doctor and seducing beings throughout the universe. Jack automatically flirted with most people he met, not caring about their gender or if they were human, alien or even robots. The Doctor often told him to stop and Jack would often reply, &quot;I'm just saying hello&quot;. But as the Doctor pointed out, &quot;For you, that's flirting&quot;. From this, it can be inferred that Jack is an omnisexual. </p>
