--- a/website/the-companions/5-lady-christina.html
+++ b/website/the-companions/5-lady-christina.html
@@ -6,6 +6,7 @@
 <title>The Doctor Who Website</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
+<link href="../styles.css" rel="stylesheet" type="text/css">
 <!-- InstanceEndEditable -->
 <!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="false" -->
 <!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="true" -->
@@ -56,7 +57,7 @@
 	<!-- InstanceBeginEditable name="Content Area" -->
       <h1>Lady Christina de Souza</h1>
       <p>Portrayed by <b>Michelle Ryan</b></p>
-      <p>Lady Christina de Souza was a friend of the Tenth and Eleventh Doctors, and had brief adventures with them both. A minor member of the British aristocracy, she was also a thief and an adrenaline junkie. Her exploits were well-publicised — at least in Britain — allowing Rory Williams to recognise her on sight.<br>
+      <p><img src="../images/the-companions/lady-christina.jpg" width="300" height="300" alt=""/>Lady Christina de Souza was a friend of the Tenth and Eleventh Doctors, and had brief adventures with them both. A minor member of the British aristocracy, she was also a thief and an adrenaline junkie. Her exploits were well-publicised — at least in Britain — allowing Rory Williams to recognise her on sight.<br>
         </p>
       <p>Christina de Souza was a notorious thief who stole for thrill, rather than profit as most thieves would; she was bored with her aristocratic upbringing. When she met the Tenth Doctor, Christina had already built a considerable reputation and was relentlessly pursued by Detective Inspector Macmillan.<br>
         </p>
