--- a/website/the-doctors/10-david-tennant.html
+++ b/website/the-doctors/10-david-tennant.html
@@ -6,6 +6,7 @@
 <title>The Doctor Who Website</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
+<link href="../styles.css" rel="stylesheet" type="text/css">
 <!-- InstanceEndEditable -->
 <!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="true" -->
 <!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
@@ -19,7 +20,7 @@
     <td colspan="2"><p>[Primary Navigation]</p></td>
   </tr>
   <tr>
-    <td colspan="2"><!-- InstanceBeginEditable name="Banner" -->[Banner]<!-- InstanceEndEditable --></td>
+    <td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-doctors.jpg" width="950" height="150" alt=""/><!-- InstanceEndEditable --></td>
   </tr>
   <tr>
     <td><p>&nbsp;</p>
@@ -68,7 +69,7 @@
 	<!-- InstanceBeginEditable name="Content Area" -->
       <h1>The Tenth Doctor</h1>
       <p>Portrayed by<b> David Tennant</b></p>
-      <p>The Tenth Doctor is the tenth incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He is played by David Tennant, who appears in three series as well as eight specials. As with previous incarnations of the Doctor, the character has also appeared in other Doctor Who multimedia.<br>
+      <p><img src="../images/the-doctors/doctor10.jpg" width="300" height="300" alt=""/>The Tenth Doctor is the tenth incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He is played by David Tennant, who appears in three series as well as eight specials. As with previous incarnations of the Doctor, the character has also appeared in other Doctor Who multimedia.<br>
         In the series' narrative, the Doctor is a centuries-old Time Lord alien from the planet Gallifrey who travels in time in his TARDIS, frequently with companions. When the Doctor is critically injured, he can regenerate his body; in doing so, his physical appearance and personality change. Tennant portrays the tenth such incarnation. This incarnation's companions have included working class shop assistant Rose Tyler (Billie Piper), medical student Martha Jones (Freema Agyeman) and fiery temp worker Donna Noble (Catherine Tate); he eventually parts ways with them all by the end of the 2008 series finale, &quot;Journey's End&quot;, after which he attempted to travel alone for the duration of the 2008–10 specials.<br>
       </p>
       <p>The Tenth Doctor generally displays a light-hearted, talkative, easy-going, witty, and cheeky manner, but repeatedly demonstrates a vengeful and unforgiving streak as well. This emerged early on when he sends the Sycorax leader (who is attacking him from behind) falling to his death while commenting that, with him, there are &quot;no second chances&quot;. In &quot;School Reunion&quot;, he acknowledges that he is less merciful than he used to be and has stuck to his &quot;one warning&quot; code, punishing his enemies if they persist in their hostilities. This is demonstrated in &quot;The Runaway Bride&quot; when he drowns the Empress of Racnoss' children and stoically watches on, prompting Donna Noble to declare that he needs somebody to stop him, and in &quot;The Family of Blood&quot; where he gives each Family member an individual and eternal punishment. His strong personal sense of justice makes him quick to anger when he feels it is violated, as in &quot;New Earth&quot; when he learns of the plague farm run by the Sisters of Plenitude, he brings down their entire operation. When Prime Minister Harriet Jones gives an order to destroy the retreating Sycorax ship against his intentions, he brings down her government in six words, &quot;Don't you think she looks tired?&quot;, which reaches the press via her assistant's headset. In &quot;The Waters of Mars&quot;, he goes so far as to declare himself above the laws of time, although there are catastrophic consequences as a result.</p>
