--- a/website/the-doctors/5-peter-davidson.html
+++ b/website/the-doctors/5-peter-davidson.html
@@ -6,6 +6,7 @@
 <title>The Doctor Who Website</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
+<link href="../styles.css" rel="stylesheet" type="text/css">
 <!-- InstanceEndEditable -->
 <!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="true" -->
 <!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
@@ -19,7 +20,7 @@
     <td colspan="2"><p>[Primary Navigation]</p></td>
   </tr>
   <tr>
-    <td colspan="2"><!-- InstanceBeginEditable name="Banner" -->[Banner]<!-- InstanceEndEditable --></td>
+    <td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-doctors.jpg" width="950" height="150" alt=""/><!-- InstanceEndEditable --></td>
   </tr>
   <tr>
     <td><p>&nbsp;</p>
@@ -68,7 +69,7 @@
 	<!-- InstanceBeginEditable name="Content Area" -->
       <h1>The Fifth Doctor</h1>
       <p>Portrayed by <strong>Peter Davidson</strong></p>
-      <p>The Fifth Doctor is the fifth incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He is portrayed by Peter Davison.<br>
+      <p><img src="../images/the-doctors/doctor5.jpg" width="300" height="300" alt=""/>The Fifth Doctor is the fifth incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He is portrayed by Peter Davison.<br>
         </p>
       <p>Within the series' narrative, the Doctor is a centuries-old Time Lord alien from the planet Gallifrey who travels in time and space in his TARDIS, frequently with companions. When the Doctor is critically injured, he can regenerate his body; in doing so, his physical appearance and personality change. Davison portrays the fifth such incarnation, a staunch pacifist with a vulnerable side and a tendency towards indecisiveness, dressed as a boyish Edwardian cricketer. He travelled with a host of companions, including boy genius Adric (Matthew Waterhouse), alien aristocrat Nyssa (Sarah Sutton) and Australian flight attendant Tegan Jovanka (Janet Fielding), whom he had travelled alongside in his previous incarnation. He also shared later adventures alongside devious schoolboy Vislor Turlough (Mark Strickson) and American college student Peri Brown (Nicola Bryant).<br>
         </p>
