--- a/website/the-doctors/6-colin-baker.html
+++ b/website/the-doctors/6-colin-baker.html
@@ -6,6 +6,7 @@
 <title>The Doctor Who Website</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
+<link href="../styles.css" rel="stylesheet" type="text/css">
 <!-- InstanceEndEditable -->
 <!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="true" -->
 <!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
@@ -20,8 +21,7 @@
   </tr>
   <tr>
     <td colspan="2"><!-- InstanceBeginEditable name="Banner" -->
-      <p>&nbsp;</p>
-      <p>[Banner]</p>
+      <p><img src="../images/banners/banner-doctors.jpg" width="950" height="150" alt=""/></p>
     <!-- InstanceEndEditable --></td>
   </tr>
   <tr>
@@ -71,7 +71,7 @@
 	<!-- InstanceBeginEditable name="Content Area" -->
       <h1>The Sixth Doctor</h1>
       <p>Portrayed by <strong>Colin Baker</strong></p>
-      <p>The Sixth Doctor is the sixth incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He was portrayed by Colin Baker. Although his televisual time on the series was comparatively brief and turbulent, Baker has continued as the Sixth Doctor in Big Finish's range of original Doctor Who audio adventures. Within the series' narrative, the Doctor is a centuries-old Time Lord alien from the planet Gallifrey who travels in time and space in his TARDIS, frequently with companions. When the Doctor is critically injured, he can regenerate his body; in doing so, his physical appearance and personality change. Baker portrays the sixth such incarnation, a flamboyant man in brightly coloured, mismatched clothes whose brash and overbearing personality set him apart from all his previous incarnations, at times hearkening back to the early irascibility and initial undertones of untrustworthiness of the First Doctor.<br>
+      <p><img src="../images/the-doctors/doctor6.jpg" width="300" height="300" alt=""/>The Sixth Doctor is the sixth incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He was portrayed by Colin Baker. Although his televisual time on the series was comparatively brief and turbulent, Baker has continued as the Sixth Doctor in Big Finish's range of original Doctor Who audio adventures. Within the series' narrative, the Doctor is a centuries-old Time Lord alien from the planet Gallifrey who travels in time and space in his TARDIS, frequently with companions. When the Doctor is critically injured, he can regenerate his body; in doing so, his physical appearance and personality change. Baker portrays the sixth such incarnation, a flamboyant man in brightly coloured, mismatched clothes whose brash and overbearing personality set him apart from all his previous incarnations, at times hearkening back to the early irascibility and initial undertones of untrustworthiness of the First Doctor.<br>
         </p>
       <p>The Sixth Doctor appeared in three seasons. His appearance in the first of these was at the end of the final episode of The Caves of Androzani which featured the regeneration from the Fifth Doctor and thereafter in the following serial The Twin Dilemma, the end of that season. The Sixth Doctor's era was marked by the decision of the BBC controller Michael Grade to put the series on an 18-month &quot;hiatus&quot; between seasons 22 and 23, with only one new Doctor Who story, Slipback, made on radio during the hiatus, broadcast as 6 parts (at 10 minutes each) on BBC Radio 4 from 25 July to 8 August 1985, as part of a children's magazine show called Pirate Radio Four. Colin Baker had been signed up for four years, as the previous actor Peter Davison had left after only three years.<br>
         The Sixth Doctor was an unpredictable and somewhat petulant egoist, whose garish, multicoloured attire reflected his volatile personality. He was both portentous and eloquent, even for the Doctor - of whom he saw himself as the finest incarnation yet – and his unpredictability was made even wilder by his mood swings, manic behaviour, bombastic outbursts and glib, unflappable wit. His personality also displayed occasionally fatalistic overtones.</p>
