--- a/website/the-doctors/8-paul-mcgann.html
+++ b/website/the-doctors/8-paul-mcgann.html
@@ -6,6 +6,7 @@
 <title>The Doctor Who Website</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
+<link href="../styles.css" rel="stylesheet" type="text/css">
 <!-- InstanceEndEditable -->
 <!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="true" -->
 <!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
@@ -19,7 +20,7 @@
     <td colspan="2"><p>[Primary Navigation]</p></td>
   </tr>
   <tr>
-    <td colspan="2"><!-- InstanceBeginEditable name="Banner" -->[Banner]<!-- InstanceEndEditable --></td>
+    <td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-doctors.jpg" width="950" height="150" alt=""/><!-- InstanceEndEditable --></td>
   </tr>
   <tr>
     <td><p>&nbsp;</p>
@@ -68,7 +69,7 @@
 	<!-- InstanceBeginEditable name="Content Area" -->
       <h1>The Eighth Doctor</h1>
       <p>Portrayed by <b>Paul McGann</b></p>
-      <p>The Eighth Doctor is the eighth incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He was portrayed by Paul McGann. Though he only appeared on television in one TV film, his adventures are extensively portrayed in other media.<br>
+      <p><img src="../images/the-doctors/doctor8.jpg" width="300" height="300" alt=""/>The Eighth Doctor is the eighth incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He was portrayed by Paul McGann. Though he only appeared on television in one TV film, his adventures are extensively portrayed in other media.<br>
         </p>
       <p>Within the series' narrative, the Doctor is a centuries-old alien, a Time Lord from the planet Gallifrey, who travels in time and space in his TARDIS, frequently with companions. When the Doctor is critically injured, he can regenerate his body but in doing so gains a new physical appearance and with it, a distinct new personality. McGann portrays the eighth such incarnation, a passionate, enthusiastic, and eccentric character. His only companion in the television movie is Grace Holloway (Daphne Ashbrook), a medical doctor whose surgery is responsible for triggering his regeneration. In the continued adventures of the character depicted in audio dramas, novels and comic books he travels alongside numerous other companions, including self-styled &quot;Edwardian Adventuress&quot; Charley, the alien Destrii and present-day humans Lucie and Sam.<br>
         </p>
